Convert DDI Exporter to no use internal DV classes
including DatasetVersion, FileMetadata, DataTable, etc.